FIX: footer: alignment of social media icons.

--- a/styles/styles_desktop.css
+++ b/styles/styles_desktop.css
@@ -115,9 +115,10 @@ header nav {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    align-items: flex-end;
 }
 header nav a {
-    padding: 1.5em 1em; 
+    padding: 1.5em 1em;
 }
 header nav a:nth-child(4n) {
     background-color: var(--colour-09);
@@ -135,22 +136,24 @@ header nav a:nth-child(4n+3) {
 /*  –––––––––––-––– FOOTER ––––––––––––––– */
 footer {
     display: grid;
-    grid-template-columns: 1fr 9fr 1fr 1fr;
-    justify-content: center;
+    grid-template-columns: 1fr 8fr 1fr;
+    justify-content: space-between;
     align-items: center;
-    background-color: var(--colour-01);
+    background-color: var(--colour-11);
     color: #fff;
-    padding: 1em;
-}
-footer p {
     padding: 1em;
 }
 footer img {
     border-radius: 50%;
-    width: 80%;
+    width: 75%;
 }
-footer a img {
-    width: 70%;
+footer div {
+    display: flex;
+    flex-flow: row wrap;
+}
+footer div img {
+    padding-bottom: 0.5em;
+    width: 50%;
 }
 
 /*  –––––––––––-––– MAIN ––––––––––––––– */
